syntax = "proto3";

import "messages.proto";

option java_multiple_files = true;
option java_package = "mx.jovannypcg.grpcclient.services";

package services;

service RepositoryEnrollerService {
    rpc enroll (mx.jovannypcg.grpcserver.messages.Repository) returns (mx.jovannypcg.grpcserver.messages.EnrollmentResponse) {}
}
